replaced drawableLeft with drawableStart

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,16 +42,16 @@
             android:id="@+id/previous_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/arrow_left"
+            android:drawableStart="@drawable/arrow_left"
             android:text="@string/previous_button"
-            android:drawablePadding="4dp" />
+            android:drawablePadding="4dp"  />
         <Button
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/next_button"
             android:drawableEnd="@drawable/arrow_right"
-            android:drawablePadding="4dp" />
+            android:drawablePadding="4dp"  />
     </LinearLayout>
 
 
