--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="24dp"
-        tools:text="@string/question_australia"
-         />
+        tools:text="@string/question_australia" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -34,24 +33,26 @@
             android:text="@string/false_button" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <Button
+
+        <ImageButton
             android:id="@+id/previous_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/arrow_left"
-            android:text="@string/previous_button"
-            android:drawablePadding="4dp"  />
-        <Button
+            android:src="@drawable/arrow_left"
+            android:contentDescription="@string/previous_button" />
+
+        <ImageButton
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/next_button"
-            android:drawableEnd="@drawable/arrow_right"
-            android:drawablePadding="4dp"  />
+            android:src="@drawable/arrow_right"
+            android:contentDescription="@string/next_button"/>
+
     </LinearLayout>
 
 
