--- a/app/src/main/res/layout/activity_cheat.xml
+++ b/app/src/main/res/layout/activity_cheat.xml
@@ -18,13 +18,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:text="Answer" />
+        android:text="@string/answer2" />
 
     <Button
         android:id="@+id/show_answer_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/show_answer_button" />
+
+    <TextView
+        android:id="@+id/version_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+         />
 
 
 </LinearLayout>
